--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ https://developer.edamam.com/edamam-docs-recipe-api
         <p>Add ingredients in the house one at a time to the list. As more ingredients are added the recipes will change to minimize extra expenditure.</p>
     </div>
     <div class="container"> 
-        <ul class="query_items"></ul>
+            <ul class="query_items"><li>apples <span class="fas fa-window-close remove">  </span></li><li>granola <span class="fas fa-window-close remove">  </span></li><li>eggs <span class="fas fa-window-close remove">  </span></li></ul>
         <div class="search-results"></div>
     </div>
     <div class="iframe_window">
